--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
@@ -13,29 +14,37 @@
       <p id="dice1"></p>
       <p id="dice2"></p>
     </div>
-    <div class ="scores">
-      <p id="p1score-total">0</p>
-      <p id="p2score-total">0</p>
-    </div>
     <br>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6">      
+        <p class="Player1"> Player 1</p>
+        <img src="img/dice1.png" rel= "A picture of dice">
         <button class="rollBtn" type="button" id="roll" onclick="rollDice()">Roll!</button><button class ="hold" type="submit">Hold!</button>
         <div id="output">
           <div>
-            <h3>Player 1 turn total:<span id="p1turn-total"></span></h3>
+            <h3>Player 1 turn total: <span id="p1turn-total"></span></h3>
             </div>
         
         </div>
       </div>
 
       <div class="col-md-6">
+        <p class="Player2">Player 2</p>
+        <img src="img/dice1.png" rel= "A picture of dice">
         <button class="rollBtn2" type="submit" id="roll2" onclick="rollDice()">Roll!</button><button class ="hold2" type="submit">Hold!</button>
         <div id="output2">
           <div>
             <h3>Player 2 turn total:<span id="p2turn-total"></span></h3>
           </div>
-        
+          <div class="container">
+            <button type="button" class="btn" onClick="nameInput()">Change your Names!</button>
+          </div>
+
+          <div class ="scores">
+            <p id="p1score-total">0</p>
+            <p id="p2score-total">0</p>
+          </div>
+
         </div>
       </div>
   </div>
